Feat: added footer and changed some styles in other components

--- a/src/mainPage/components/CategoriesList.css
+++ b/src/mainPage/components/CategoriesList.css
@@ -19,6 +19,7 @@
    list-style: none;
    transform-style: preserve-3d;
    transition: all 1s linear;
+   padding-bottom: 1.5rem;
 }
 
 .categories__list-item {
