--- a/src/mainPage/components/About.css
+++ b/src/mainPage/components/About.css
@@ -5,7 +5,7 @@
 .about__content {
    width: 90%;
    margin: 0 auto;
-   padding-top: 1.5rem;
+   padding: 1.5rem 0;
 }
 
 .about__unordered-list {
