--- a/src/mainPage/components/About.css
+++ b/src/mainPage/components/About.css
@@ -13,6 +13,12 @@
    list-style: none;
 }
 
+.about__list-item {
+   display: flex;
+   align-items: center;
+   padding: 0.5rem;
+}
+
 .list-item__content {
    display: flex;
    align-items: center;
@@ -22,6 +28,51 @@
    margin-right: 1rem;
 }
 
-.list-item__content p {
-   text-align: center;
+@media (min-width: 768px) {
+   .about__unordered-list {
+      grid-template-columns: 1fr 1fr;
+   }
+
+   .about__list-item {
+      flex-direction: column;
+      justify-content: center;
+      padding: 0;
+   }
+
+   .about__list-item p {
+      text-align: center;
+      margin-top: 1.3rem;
+      font-size: 1.1rem;
+   }
+
+   .list-item__content {
+      flex-direction: column;
+      padding: 1rem;
+   }
+
+   .list-item__content img {
+      width: 6rem;
+   }
+}
+
+@media (min-width: 1336px) {
+   .about__unordered-list {
+      grid-template-columns: 1fr 1fr 1fr;
+   }
+
+   .about__list-item p {
+      font-size: 1.3rem;
+   }
+
+   .list-item__content img {
+      width: 8rem;
+   }
+
+   .about__list-item {
+      padding: 1.2rem 0;
+   }
+
+   .about__content {
+      width: 80%;
+   }
 }
