--- a/src/mainPage/components/CategoriesList.css
+++ b/src/mainPage/components/CategoriesList.css
@@ -14,6 +14,10 @@
    margin: 0.5rem 0;
 }
 
+.categories__description--spacing {
+   padding: 0.7rem 0;
+}
+
 .categories__unorderd-list {
    display: grid;
    list-style: none;
@@ -27,6 +31,7 @@
    background-color: #032538;
    text-align: center;
    border-radius: 10px;
+   cursor: pointer;
 }
 
 .categories__list-item::first-letter {
@@ -69,4 +74,30 @@
    box-sizing: border-box;
    padding: 10px;
    text-align: center;
+}
+
+@media (min-width: 768px) {
+   .categories__unorderd-list {
+      grid-template-columns: 1fr 1fr;
+   }
+}
+
+@media (min-width: 1024px) {
+   .categories__description--spacing {
+      padding: 1.5rem 0;
+   }
+}
+
+@media (min-width: 1336px) {
+   .categories__unorderd-list {
+      grid-template-columns: 1fr 1fr 1fr;
+   }
+   .categories__introduction {
+      width: 80%;
+   }
+
+   .categories__unorderd-list {
+      width: 80%;
+      margin: 0 auto;
+   }
 }
