--- a/src/shared/components/FormElements/Button.css
+++ b/src/shared/components/FormElements/Button.css
@@ -65,3 +65,10 @@
 .button--big {
    font-size: 1.5rem;
 }
+
+@media (min-width: 768px) {
+   .button--xs {
+      font-size: 0.8rem;
+      padding: 0.5rem 1rem;
+   }
+}
