--- a/src/shared/components/Navigation/NavLinks.css
+++ b/src/shared/components/Navigation/NavLinks.css
@@ -12,23 +12,34 @@
 
 .nav-links li {
    margin: 1rem;
+   font-size: 0.8rem;
+   display: flex;
+   align-items: center;
 }
 
 .nav-links a {
    border: 1px solid transparent;
    color: #292929;
    text-decoration: none;
-   padding: 0.5rem;
    color: white;
    text-transform: uppercase;
 }
 
-.nav-links a:hover,
-.nav-links a:active,
-.nav-links a.active {
+.nav-links a::after {
+   display: block;
+   content: '';
+   width: 0px;
+   height: 2px;
+   background-color: #e8ff08;
+   transition: 0.35s;
+}
+
+.nav-links a:hover::after,
+.nav-links a:active::after,
+.nav-links a.active::after {
    background: #e8ff08;
-   border-color: #292929;
-   color: #292929;
+   width: 100%;
+   height: 2px;
 }
 
 .nav-links button {
@@ -51,12 +62,19 @@
 }
 
 @media (min-width: 768px) {
+   .nav-links li {
+      font-size: 1rem;
+   }
+}
+
+@media (min-width: 1024px) {
    .nav-links {
       flex-direction: row;
+      margin: 0;
    }
 
    .nav-links li {
-      margin: 0 0.5rem;
+      margin: 0.5rem 1.5rem 0.5rem 0;
    }
 
    .nav-links a {
@@ -74,5 +92,11 @@
    .nav-links button:active {
       background: #f8df00;
       color: #292929;
+   }
+}
+
+@media (min-width: 1336px) {
+   .nav-links li {
+      margin: 0.7rem 2rem 0.7rem 0;
    }
 }
