--- a/src/shared/util/Paragraph.css
+++ b/src/shared/util/Paragraph.css
@@ -38,3 +38,23 @@
 .paragraph--align-left {
    text-align: left;
 }
+
+@media (min-width: 768px) {
+   .paragraph--big-font {
+      font-size: 2.7rem;
+   }
+
+   .paragraph--normal-font {
+      font-size: 1.3rem;
+   }
+}
+
+@media (min-width: 1600px) {
+   .paragraph--big-font {
+      font-size: 3rem;
+   }
+
+   .paragraph--normal-font {
+      font-size: 1.5rem;
+   }
+}
