--- a/src/shared/components/FormElements/Button.css
+++ b/src/shared/components/FormElements/Button.css
@@ -55,7 +55,7 @@
 .button--xs {
    margin: 0;
    font-size: 0.6rem;
-   padding: 0.3rem 0.8rem;
+   padding: 0.3rem 0.6rem;
 }
 
 .button--small {
@@ -64,6 +64,14 @@
 
 .button--big {
    font-size: 1.5rem;
+}
+
+@media (min-width: 568px) {
+   .button--xs {
+      font-size: 0.8rem;
+      padding: 0.4rem 0.8rem;
+      font-size: 1rem;
+   }
 }
 
 @media (min-width: 768px) {
