--- a/src/shared/util/Paragraph.css
+++ b/src/shared/util/Paragraph.css
@@ -39,6 +39,10 @@
    text-align: left;
 }
 
+.paragraph--gray-out {
+   color: gray;
+}
+
 @media (min-width: 768px) {
    .paragraph--big-font {
       font-size: 2.7rem;
