--- a/src/categoriesPage/pages/Categories.css
+++ b/src/categoriesPage/pages/Categories.css
@@ -26,6 +26,7 @@
    text-decoration: none;
    padding: 0.6rem 0.3rem;
    min-width: 150px;
+   min-height: 60px;
    transition: 0.3s;
    display: flex;
    justify-content: center;
@@ -53,12 +54,12 @@
       flex-direction: column;
       flex-basis: 40%;
       align-items: center;
+      margin: 10rem 0;
    }
 
    .categories-list__item {
       margin: 0.5rem 0.4rem;
       width: 70%;
-      padding: 0.7rem 0;
    }
 
    .category-tasks {
