--- a/src/mainPage/components/CategoriesList.css
+++ b/src/mainPage/components/CategoriesList.css
@@ -1,5 +1,4 @@
 .categories {
-   position: relative;
    background-color: #eee;
 }
 
@@ -20,9 +19,8 @@
 
 .categories__unorderd-list {
    display: grid;
+   row-gap: 5px;
    list-style: none;
-   transform-style: preserve-3d;
-   transition: all 1s linear;
    padding-bottom: 1.5rem;
 }
 
@@ -31,49 +29,26 @@
    background-color: #032538;
    text-align: center;
    border-radius: 10px;
-   cursor: pointer;
-}
-
-.categories__list-item::first-letter {
-   text-transform: uppercase;
-}
-
-.categories__container {
-   position: relative;
+   padding: 0.9rem;
    margin: 10px auto;
-   width: 90%;
-   height: 3rem;
-   z-index: 1;
-   perspective: 1000;
 }
 
-.categories__innercontainer {
-   width: 100%;
-   height: 100%;
-   transform-style: preserve-3d;
-   transition: all 1s linear;
+.categories__list-item:hover {
+   background-color: rgba(3, 37, 56, 0.75);
 }
 
-.categories__container:hover .categories__innercontainer {
-   transform: rotateY(180deg);
-   transform-origin: center;
-   box-shadow: -5px 5px 5px #aaa;
+.category-disabled,
+.category-disabled p {
+   background-color: #777;
+   color: #444;
 }
 
-.face {
-   position: absolute;
-   backface-visibility: hidden;
-   width: 100%;
-   height: 100%;
+.category-disabled:hover {
+   background-color: #777;
 }
 
-.face.back {
-   display: block;
-   transform: rotateY(180deg);
-   transform-origin: center;
-   box-sizing: border-box;
-   padding: 10px;
-   text-align: center;
+.categories__list-item p::first-letter {
+   text-transform: uppercase;
 }
 
 @media (min-width: 768px) {
