--- a/src/taskPage/pages/Task.css
+++ b/src/taskPage/pages/Task.css
@@ -1,19 +1,23 @@
+.task-container {
+   background-color: #eee;
+}
+
 .task-explanation {
    display: flex;
    flex-direction: column;
-   padding: 8px 16px 8px 8px;
+   padding: 2rem 0.5rem;
    font-family: Arial;
    font-size: 16px;
    line-height: 28px;
-   background-color: #eeeeee;
+   text-align: justify;
 }
 
 .task-explanation .example {
    padding: 8px;
-   margin-bottom: 6px;
    border: 2px solid #afafce;
    border-radius: 10px;
    font-size: 14px;
+   margin: 1rem 0;
 }
 
 .task-explanation .example-code {
@@ -23,7 +27,6 @@
 
 .task-explanation .assumptions {
    padding: 8px;
-   margin-top: 40px;
    border: 2px solid #afafce;
    border-radius: 10px;
    font-size: 14px;
@@ -31,14 +34,58 @@
 
 .task-explanation .assumptions ul {
    margin: 0;
-   margin-left: 10px;
+   margin-left: 1.5rem;
 }
 
-.task-explanation .task-footer {
+.task-explanation .footer {
    display: flex;
    justify-content: space-between;
    margin-top: 20px;
    font-style: italic;
    font-size: 10px;
    font-weight: 100;
+}
+
+@media (min-width: 1024px) {
+   .task-explanation {
+      font-size: 1.2rem;
+   }
+
+   .task-explanation .example {
+      font-size: 1.2rem;
+   }
+
+   .task-explanation .example-code {
+      font-size: 1rem;
+   }
+
+   .task-explanation .assumptions {
+      font-size: 1.2rem;
+   }
+
+   .task-explanation .footer {
+      font-size: 1rem;
+   }
+}
+
+@media (min-width: 1336px) {
+   .task-explanation {
+      font-size: 1.4rem;
+   }
+
+   .task-explanation .example {
+      font-size: 1.4rem;
+   }
+
+   .task-explanation .example-code {
+      font-size: 1.2rem;
+   }
+
+   .task-explanation .assumptions {
+      font-size: 1.4rem;
+   }
+
+   .task-explanation .footer {
+      font-size: 1.2rem;
+   }
 }
