--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 .layout-wrapper {
    margin-top: 4rem;
-   min-height: 100vh;
+   min-height: calc(100vh-4rem);
    display: flex;
    flex-direction: column;
 }
