--- a/src/taskPage/components/TaskToolbar.css
+++ b/src/taskPage/components/TaskToolbar.css
@@ -3,7 +3,15 @@
    padding: 0.8rem 1rem;
 }
 
-.toolbar p {
+.display-none {
+   display: none;
+}
+
+.select-language {
+   margin: 0.5rem 0;
+}
+
+.toolbar__title {
    color: white;
    font-weight: bold;
    margin-bottom: 0.5rem;
@@ -27,4 +35,39 @@
 
 .toolbar__button--txtAlignRight {
    text-align: right;
+}
+
+.toolbar__options {
+   display: flex;
+   justify-content: space-between;
+}
+
+@media (min-width: 768px) {
+   .toolbar__tabs {
+      justify-content: right;
+   }
+
+   .toolbar__tabs button {
+      flex-basis: 30%;
+      margin-left: 1rem;
+   }
+
+   .toolbar__title {
+      font-size: 2rem;
+      margin: 0.5rem 0 1rem;
+   }
+
+   .select-language {
+      margin-right: auto;
+   }
+
+   .toolbar__select {
+      width: 50%;
+   }
+}
+
+@media (min-width: 1024px) {
+   .toolbar__tabs {
+      display: none;
+   }
 }
