--- a/src/mainPage/components/About.css
+++ b/src/mainPage/components/About.css
@@ -17,6 +17,16 @@
    display: flex;
    align-items: center;
    padding: 0.5rem;
+   position: relative;
+}
+
+.about-list-item__not-available {
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   background-color: rgba(238, 238, 238, 0.8);
 }
 
 .list-item__content {
