--- a/src/mainPage/components/LanguagesList.css
+++ b/src/mainPage/components/LanguagesList.css
@@ -22,6 +22,16 @@
    display: flex;
    align-items: center;
    padding: 0.5rem;
+   position: relative;
+}
+
+.list-item__not-available {
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   background-color: rgba(3, 27, 41, 0.8);
 }
 
 .list-item__image {
@@ -36,7 +46,7 @@
 
 @media (min-width: 568px) {
    .list-item__image {
-      width: 4rem;
+      width: 8vh;
    }
 }
 
