--- a/src/mainPage/components/Welcome.css
+++ b/src/mainPage/components/Welcome.css
@@ -5,8 +5,10 @@
    transform: translate(-50%, -50%);
    color: white;
    width: 90%;
-   background-color: rgba(0, 0, 0, 0.8);
-   box-shadow: 0, 0, 20px, rgba(0, 0, 0, 0.8);
+   background-color: rgba(0, 0, 0, 0.2);
+   width: 100%;
+   height: 100%;
    padding: 2rem 0.5rem;
    border-radius: 10px;
+   z-index: 2;
 }
