--- a/src/shared/components/Navigation/NavLinks.css
+++ b/src/shared/components/Navigation/NavLinks.css
@@ -61,6 +61,46 @@
    color: white;
 }
 
+.user-profile i {
+   color: #e8ff08;
+   cursor: pointer;
+}
+
+.user-profile {
+   position: relative;
+   display: inline-block;
+}
+
+.dropdown-content {
+   display: none;
+   position: absolute;
+   background-color: #031b29;
+   border: 1px solid #e8ff08;
+   min-width: 160px;
+   z-index: 1;
+   top: 100%;
+   right: -40%;
+}
+
+.dropdown-content a {
+   padding: 12px 16px;
+   text-decoration: none;
+   display: block;
+   cursor: pointer;
+}
+
+.dropdown-content a:hover {
+   background-color: #031b29;
+}
+
+.user-profile:hover .dropdown-content {
+   display: block;
+}
+
+.user-profile i {
+   font-size: 1.2rem;
+}
+
 @media (min-width: 768px) {
    .nav-links li {
       font-size: 1rem;
