--- a/src/shared/components/Navigation/NavLinks.css
+++ b/src/shared/components/Navigation/NavLinks.css
@@ -35,70 +35,20 @@
 }
 
 .nav-links a:hover::after,
-.nav-links a:active::after,
 .nav-links a.active::after {
    background: #e8ff08;
    width: 100%;
    height: 2px;
 }
 
-.nav-links button {
-   cursor: pointer;
-   border: 1px solid #292929;
-   color: #292929;
-   background: transparent;
-   padding: 0.5rem;
-   font: inherit;
-}
-
-.nav-links button:focus {
-   outline: none;
-}
-
-.nav-links button:hover,
-.nav-links button:active {
-   background: #292929;
-   color: white;
-}
-
-.user-profile i {
-   color: #e8ff08;
-   cursor: pointer;
-}
-
-.user-profile {
-   position: relative;
-   display: inline-block;
-}
-
-.dropdown-content {
-   display: none;
-   position: absolute;
-   background-color: #031b29;
-   border: 1px solid #e8ff08;
-   min-width: 160px;
-   z-index: 1;
-   top: 100%;
-   right: -40%;
-}
-
-.dropdown-content a {
-   padding: 12px 16px;
-   text-decoration: none;
-   display: block;
-   cursor: pointer;
-}
-
-.dropdown-content a:hover {
-   background-color: #031b29;
-}
-
-.user-profile:hover .dropdown-content {
-   display: block;
-}
-
 .user-profile i {
    font-size: 1.2rem;
+   color: #e8ff08;
+}
+
+.user-profile .user-profile__greetings {
+   color: #e8ff08;
+   margin-right: 10px;
 }
 
 @media (min-width: 768px) {
@@ -120,18 +70,6 @@
    .nav-links a {
       color: white;
       text-decoration: none;
-   }
-
-   .nav-links button {
-      border: 1px solid white;
-      color: white;
-      background: transparent;
-   }
-
-   .nav-links button:hover,
-   .nav-links button:active {
-      background: #f8df00;
-      color: #292929;
    }
 }
 
