--- a/src/taskPage/components/Output.css
+++ b/src/taskPage/components/Output.css
@@ -1,104 +1,23 @@
 .output {
-   background-color: #3a3b3c;
-   height: 100vh;
-   position: fixed;
-   z-index: 1;
+   background-color: #032538;
    width: 100%;
-   top: 11vh;
-   left: 0;
-   color: white;
-}
-
-.output--position-rel {
-   position: relative;
-   height: 100%;
 }
 
 .output__info {
    width: 100%;
-   top: 0;
-   left: 0;
-   position: absolute;
-}
-
-.output__details {
-   width: 100%;
-   position: absolute;
-   height: 50%;
-   top: 0;
-   left: 0;
-   z-index: 3;
-   background-color: #151616;
-}
-
-.slider__divider {
-   position: absolute;
-   width: 100%;
-   height: 3px;
-   top: 50%;
-   left: 0%;
-   background: black;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   z-index: 4;
-}
-
-.slider__handle {
-   border-radius: 50%;
-   flex: 0 0 auto;
-   background: rgba(255, 255, 255, 0.75);
-   width: 40px;
-   height: 40px;
-   display: flex;
-   flex-direction: column;
-   flex-wrap: wrap;
-   align-items: center;
-   justify-content: center;
-   cursor: row-resize;
-}
-
-.slider__handle .fa-chevron-left {
-   transform: rotateX(360deg);
-}
-
-@media (min-width: 568px) {
-   .output {
-      top: 13vh;
-   }
 }
 
 @media (min-width: 1024px) {
-   .output {
-      position: absolute;
-      top: 68vh;
-      left: 0;
-      display: flex;
-      background-color: 3a3b3c;
-      height: 20vh;
-   }
-
-   .slider__divider {
-      display: none;
-   }
-
-   .output__info,
-   .output__details {
+   .output__info {
       position: static;
       height: 100%;
       overflow-y: auto;
       padding: 0.5rem;
       border-top: 2px solid #e8ff08;
-      background-color: #032538;
       color: white;
    }
 
    .output__info {
       border-right: 1px solid #e8ff08;
-   }
-
-   .output__details {
-      border-left: 1px solid #e8ff08;
-      display: none;
    }
 }
