--- a/src/taskPage/pages/Task.css
+++ b/src/taskPage/pages/Task.css
@@ -108,13 +108,19 @@
    .slider-task__handle {
       border-radius: 50%;
       flex: 0 0 auto;
-      background: rgba(255, 255, 255, 0.75);
+      background: rgba(255, 255, 255, 0.2);
       width: 40px;
       height: 40px;
       display: flex;
       align-items: center;
       justify-content: space-around;
       cursor: col-resize;
+      transition: 0.5s;
+   }
+
+   .slider-task__handle:hover,
+   .slider-task__handle.active {
+      background: rgba(255, 255, 255, 0.75);
    }
 
    .slider-task__handle i {
