--- a/src/taskPage/components/CodeEditor.css
+++ b/src/taskPage/components/CodeEditor.css
@@ -36,7 +36,7 @@
    margin-bottom: 0.5rem;
 }
 
-.none-edit button i {
+.none-edit button svg {
    padding-right: 8px;
 }
 
@@ -64,7 +64,7 @@
    margin-right: 1rem;
 }
 
-.minimalize-editor button i {
+.minimalize-editor button svg {
    font-size: 0.8rem;
 }
 
