--- a/src/solutionHistorypage/pages/SubmissionCode.css
+++ b/src/solutionHistorypage/pages/SubmissionCode.css
@@ -12,7 +12,7 @@
 
 .code-content {
    margin: 0 auto;
-   max-width: 1000px;
+   max-width: 1200px;
    margin-top: 6vh;
-   padding: 0 2vw;
+   padding: 5vh 2vw 10vh;
 }
