--- a/src/taskPage/components/Output.css
+++ b/src/taskPage/components/Output.css
@@ -1,6 +1,8 @@
 .output {
    background-color: #032538;
    width: 100%;
+   color: white;
+   padding: 1rem;
 }
 
 .output__info {
@@ -13,11 +15,6 @@
       height: 100%;
       overflow-y: auto;
       padding: 0.5rem;
-      border-top: 2px solid #e8ff08;
       color: white;
-   }
-
-   .output__info {
-      border-right: 1px solid #e8ff08;
    }
 }
